# DLC-Cal-Img

./: .gitattributes  .gitignore  About.md  DLC.md  README.md  main.ipynb  main.py  pyproject.toml
Binarizing data/scripts/: bina_csv_data.py
DLC_data/dlc data expl/: dlc_data_expl.py
DLC_data/to csv/: combined_dlc_data.csv  data_to_csv.py
Minian_data/scripts/: plotting.py
Minian_data/scripts/minian/: C.csv  C_binary.csv  C_derivative.csv  C_filtered.csv  C_normalized.csv
Scripts/DLC_data/to csv/dlc data expl/: dlc_data_sample.csv
Scripts/DLC_data/to_csv/: dlc_heatmap.py
Scripts/Minian_data/: __init__.py  pipeline.py
Scripts/Minian_data/scripts/: bina_csv_data.py  convert_to_csv.py  plotting.py
Scripts/Minian_data/scripts/minian/: C_binary.csv
Scripts/RDMS_data/: low_level_loop.py
Scripts/cleaning_data/data_names/names/: data_name.py
Scripts/cleaning_data/timestamp_conversion/: transpose_timestamps.py
Scripts/data_matching/: C_binary_active_DLC_frames.csv  sysClock_match.py  visual_plotting.py
Scripts/data_matching/heatmaps/: place_fields.csv
Scripts/detecting_ROIs/: ROI_check.py  draw_ROI.py  frame_extract.py
cleaning data/timestamp conversion/: timestamp_paired.csv  transpose_timestamps.py
data_matching/: sysClock_match.py  visual_plotting.py
detecting ROIs/: draw_ROI.py
docs/COLAB/: COLAB_YOURDATA_TrainNetwork_VideoAnalysis.ipynb
docs/information/: ABOUT.md  Cleaning.md  DLC.md  Guide.md  Minian.md
