[project]
name = "martial-madness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "tables>=3.11.0",
    "xarray>=2026.1.0",
    "zarr>=3.1.5",
]
